# 02-Web-HW

./: Dockerfile  Dockerfile.macOS  README.md  classes.py  main.py  pyproject.toml
